--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,63 @@ body {
   place-content: center;
 }
 
+form {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  color: #fff;
+}
+
+.toggle {
+  position: relative;
+  margin: 25px 10px;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkbox-label {
+  display: block;
+  width: 45px;
+  height: 25px;
+}
+
+.checkbox-label::before,
+.checkbox-label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+
+.checkbox-label::before {
+  width: 100%;
+  height: 100%;
+  background-color: #dedede;
+  border-radius: 1em;
+  transition: background-color 250ms ease;
+}
+
+.checkbox-label::after {
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+  transition: left 250ms ease;
+}
+
+.checkbox:checked + .checkbox-label::before {
+  background-color: rgb(122, 99, 190);
+}
+
+.checkbox:checked + .checkbox-label::after {
+  left: 50%;
+}
+
 .board {
   width: 100%;
   height: 100%;
@@ -58,7 +115,6 @@ body {
   width: 200px;
   height: 200px;
   background: #fff;
-  /* border: 4px solid white; */
   display: flex;
   justify-content: center;
   align-items: center;
