--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,8 @@ form {
 .checkbox-label::before {
   width: 100%;
   height: 100%;
-  background-color: #dedede;
+  /* background-color: #dedede; */
+  background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
   border-radius: 1em;
   transition: background-color 250ms ease;
 }
@@ -94,7 +95,7 @@ form {
 }
 
 .checkbox:checked + .checkbox-label::before {
-  background-color: rgb(122, 99, 190);
+  background: linear-gradient(to top, rgb(181, 26, 0), rgb(227, 0, 79));
 }
 
 .checkbox:checked + .checkbox-label::after {
@@ -140,7 +141,7 @@ form {
   width: 100%;
   height: 100%;
   border-radius: 30px;
-  background: linear-gradient(to right, rgb(91, 102, 202), rgb(122, 99, 190));
+  background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
 }
 
 .card-front {
@@ -177,6 +178,11 @@ button:hover {
   border: 10px dashed var(--accent-color);
 }
 
+.hard-color {
+  background: linear-gradient(to top, rgb(161, 10, 202), rgb(205, 39, 251));
+  background: linear-gradient(to right, rgb(181, 26, 0), rgb(227, 0, 79));
+}
+
 @keyframes hide {
   to {
     transform: scale(0);
@@ -188,7 +194,6 @@ button:hover {
     height: 80vh;
   }
   .board {
-    grid-template-columns: repeat(4, 1fr);
     grid-gap: 7px;
   }
 
