--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ form {
   height: 100%;
   border-radius: 30px;
   background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
+  background: var(--accent-color);
 }
 
 .card-front {
