--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,6 @@ form {
 .checkbox-label::before {
   width: 100%;
   height: 100%;
-  /* background-color: #dedede; */
   background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
   border-radius: 1em;
   transition: background-color 250ms ease;
@@ -139,6 +138,10 @@ form {
 }
 
 .card-back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
   height: 100%;
   border-radius: 30px;
@@ -180,7 +183,6 @@ button:hover {
 }
 
 .hard-color {
-  background: linear-gradient(to top, rgb(161, 10, 202), rgb(205, 39, 251));
   background: linear-gradient(to right, rgb(181, 26, 0), rgb(227, 0, 79));
 }
 
@@ -191,6 +193,8 @@ button:hover {
 }
 
 .score-history-container {
+  display: flex;
+  flex-direction: column;
   border: 5px solid black;
   border-image-source: linear-gradient(
     to right,
@@ -240,15 +244,13 @@ header {
   transform: translate(-50%, -50%) scale(0);
   transform-origin: center;
   z-index: 10;
-  width: 60vw;
-  filter: drop-shadow(5px 5px 10px rgba(0 0 0 / 50%));
+  /* width: 60vw; */
+  width: 169px;
+  mix-blend-mode: multiply;
   animation: grow 75ms linear forwards;
 }
 
 @keyframes grow {
-  60% {
-    transform: translate(-50%, -50%) scale(1.2);
-  }
   100% {
     transform: translate(-50%, -50%) scale(1);
   }
