--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ header {
   }
 }
 
-@media screen and (max-height: 750px) {
+@media (orientation: landscape) and (max-height: 750px) {
   .card {
     width: clamp(75px, 20vh, 200px);
     height: clamp(75px, 20vh, 200px);
