--- a/css/main.css
+++ b/css/main.css
@@ -279,8 +279,8 @@ header {
   margin-right: -50%;
   z-index: 10;
   width: 50px;
-  /* visibility: hidden; */
-  /* animation: blink 400ms linear 3; */
+  visibility: hidden;
+  animation: blink 400ms linear 3;
 }
 
 @keyframes blink {
