--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  min-height: 100vh;
   background-color: black;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
@@ -130,8 +129,6 @@ form {
 }
 
 .board {
-  width: 100%;
-  height: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr;
@@ -141,9 +138,11 @@ form {
 }
 
 .card {
-  position: relative;
-  width: clamp(65px, 20vw, 200px);
-  height: clamp(65px, 20vw, 200px);
+  /* position: relative; */
+  width: clamp(100px, 20vw, 200px);
+  /* width: clamp(65px, 20vw, 200px); */
+  /* height: clamp(65px, 20vw, 200px); */
+  height: clamp(100px, 20vw, 200px);
   background: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -406,20 +405,6 @@ header {
     visibility: visible;
   }
 }
-/* 
-@media (pointer: coarse) and (min-width: 400px) {
-  .container {
-    -webkit-transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    transform: scale(0.9);
-  }
-
-  .board {
-    -webkit-transform: scale(0.95);
-    -ms-transform: scale(0.95);
-    transform: scale(0.95);
-  }
-} */
 
 @media (orientation: landscape) and (max-height: 775px) {
   .card {
@@ -432,8 +417,11 @@ header {
   .container {
     height: 80vh;
   }
+
+  /* testing  */
   .board {
-    grid-gap: 7px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .card {
@@ -449,6 +437,6 @@ header {
   }
 
   .match-visual {
-    border: 5px dashed var(--accent-color);
+    border: 4px dashed var(--accent-color);
   }
 }
