--- a/css/main.css
+++ b/css/main.css
@@ -420,11 +420,12 @@ header {
   .board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 15px;
+    grid-gap: 2px;
   }
 
   .card {
     border-radius: 15px;
+    margin: 5px;
   }
 
   .card-back {
