--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,6 @@ form {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-
   width: 100%;
   height: 100%;
   border-radius: 30px;
@@ -407,6 +406,10 @@ header {
   .card {
     width: clamp(75px, 20vh, 200px);
     height: clamp(75px, 20vh, 200px);
+  }
+
+  img {
+    width: 90px;
   }
 }
 
