--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
 .score-box {
   position: absolute;
   background-color: var(--accent-color);
+  background-color: red;
   right: 0;
   padding: 5px 15px 8px 15px;
   border-radius: 0 0 0 20px;
@@ -409,7 +410,7 @@ header {
   }
 
   img {
-    width: 90px;
+    width: 85px;
   }
 }
 
