added hard mode to new monster theme

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,7 @@
   --correct-color: rgb(93, 248, 93);
   --accent-color: #c58ced;
   --gradient: linear-gradient(-90deg, #5280fd, #c58ced);
+  --hard-gradient: linear-gradient(to right, rgb(181, 26, 0), rgb(227, 0, 79));
 }
 
 * {
