--- a/scss/_score-box.scss
+++ b/scss/_score-box.scss
@@ -2,7 +2,7 @@
   position: absolute;
   background: var(--gradient);
   right: 0;
-  padding: 5px 15px 8px 15px;
+  padding: 8px 15px;
   border-radius: 0 0 0 20px;
   color: #fff;
   text-align: center;
@@ -15,4 +15,5 @@
 
 .score {
   font-size: 2rem;
+  font-weight: bold;
 }
