--- a/scss/_toggle-btn.scss
+++ b/scss/_toggle-btn.scss
@@ -12,7 +12,11 @@ form {
 }
 
 .checkbox {
-  display: none;
+  position: absolute;
+  top: 4px;
+  left: 5px;
+  width: 40px;
+  height: 20px;
 }
 
 .checkbox-label {
