added footer with attribution and created favicons

--- a/scss/_score-box.scss
+++ b/scss/_score-box.scss
@@ -1,6 +1,7 @@
 .score-box {
   position: absolute;
   background: var(--gradient);
+  top: 0;
   right: 0;
   padding: 8px 15px;
   border-radius: 0 0 0 20px;
