--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,7 +2,6 @@
   --correct-color: #2bb82b;
   --correct-color: rgb(93, 248, 93);
   --accent-color: #c58ced;
-  // --gradient: linear-gradient(-90deg, #5280fd, #c58ced);
   --gradient: linear-gradient(
     24deg,
     rgb(162, 81, 219) 0%,
@@ -16,6 +15,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 body {
@@ -42,7 +46,7 @@ main {
   background-size: 40%;
   background-position: center;
   transform-origin: center;
-  animation: rotate 2000s linear infinite;
+  animation: rotate 1900s linear infinite;
 }
 
 @keyframes rotate {
@@ -55,7 +59,7 @@ main {
   position: absolute;
   width: 175px;
   height: auto;
-  top: 25px;
+  top: 15px;
   left: 25px;
 }
 
