--- a/scss/_score-history.scss
+++ b/scss/_score-history.scss
@@ -33,10 +33,6 @@
   animation: slide-out 150ms ease-in-out forwards;
 }
 
-.slide-out .tab {
-  font-size: 2rem;
-}
-
 @keyframes slide-out {
   to {
     transform: translate(105%, -50%);
@@ -57,8 +53,9 @@ header {
   display: flex;
   width: 70%;
   justify-content: space-around;
+  align-items: center;
   margin: 0 auto;
-  padding: 8px 0;
+  padding: 10px 0;
   background: #fff;
   color: #000;
   border-radius: 20px;
@@ -68,14 +65,16 @@ header {
 .scores-container {
   display: flex;
   flex-direction: column-reverse;
+  overflow-y: scroll;
 }
 
 .score-display {
   display: flex;
   width: 70%;
   justify-content: space-around;
+  align-items: center;
   margin: 0 auto;
-  padding: 15px 0;
+  padding: 20px 0;
   border-bottom: 1px dotted rgba(255, 255, 255, 0.6);
 }
 
