--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,6 +16,21 @@
   font-family: sans-serif;
 }
 
+// Extends
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 a {
   color: inherit;
   text-decoration: none;
