--- a/scss/_score-history.scss
+++ b/scss/_score-history.scss
@@ -2,8 +2,6 @@
   position: absolute;
   top: 50%;
   transform: translate(193%, -50%);
-  display: flex;
-  flex-direction: column;
   width: 50vw;
   min-width: 325px;
   height: 70vh;
@@ -22,9 +20,7 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-48%, -50%) rotate(-90deg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend .flex-row;
   height: 40px;
   font-weight: bold;
 }
@@ -50,10 +46,9 @@ h1 {
 }
 
 header {
-  display: flex;
   width: 70%;
+  @extend .flex-row;
   justify-content: space-around;
-  align-items: center;
   margin: 0 auto;
   padding: 10px 0;
   background: #fff;
@@ -63,16 +58,15 @@ header {
 
 // Adds newest score on top
 .scores-container {
-  display: flex;
+  @extend .flex-column;
   flex-direction: column-reverse;
   overflow-y: scroll;
 }
 
 .score-display {
-  display: flex;
+  @extend .flex-row;
   width: 70%;
   justify-content: space-around;
-  align-items: center;
   margin: 0 auto;
   padding: 20px 0;
   border-bottom: 1px dotted rgba(255, 255, 255, 0.6);
