--- a/scss/_toggle-btn.scss
+++ b/scss/_toggle-btn.scss
@@ -1,7 +1,5 @@
 form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend .flex-row;
   color: #fff;
   margin-top: -25px;
 }
