changed footer text to black for better contrast/readability

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,6 +6,7 @@ footer {
   height: 225px;
   padding: 50px;
   background: var(--accent-color);
+  color: black;
   margin-top: 175px;
   line-height: 150%;
   z-index: 10;
