--- a/scss/_score-box.scss
+++ b/scss/_score-box.scss
@@ -1,6 +1,6 @@
 .score-box {
   position: absolute;
-  background: var(--gradient);
+  background: var(--easy-gradient);
   top: 0;
   right: 0;
   padding: 8px 15px;
